audit-log-after-PATCH5B-final.txt

> uteklinker-chatbot@1.0.1 audit
> node ./scripts/audit-runner.js


=== npm run lint ===

> uteklinker-chatbot@1.0.1 lint
> eslint lib scripts


Oops! Something went wrong! :(

ESLint: 9.38.0

SyntaxError: Unexpected identifier 'setTimeout'
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:497:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:544:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:148:19)
node:internal/errors:984
  const err = new Error(message);
              ^

Error: Command failed: npm run lint
    at genericNodeError (node:internal/errors:984:15)
    at wrappedFn (node:internal/errors:538:14)
    at checkExecSyncError (node:child_process:891:11)
    at execSync (node:child_process:963:15)
    at run (file:///C:/uteklinker-chatbot-vercel/scripts/audit-runner.js:5:3)
    at file:///C:/uteklinker-chatbot-vercel/scripts/audit-runner.js:9:1
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5) {
  status: 2,
  signal: null,
  output: [ null, null, null ],
  pid: 21436,
  stdout: null,
  stderr: null
}

Node.js v20.19.5
